--- a/index.css
+++ b/index.css
@@ -26,6 +26,7 @@ html {
     font-style: italic;
     font-size: 50px;
     top: 240px;
+    text-align: center;
     position: relative;
     background-color:#3A6D8C;
 }
@@ -48,4 +49,57 @@ html {
     position: relative;
     top: 250px;
     z-index: 100;
+}
+
+.menu-navigasi {
+    display: flex;
+    margin: 0;
+    background-color: rgba(0, 0, 0, 0.5);;
+    padding: 0;
+    justify-content: flex-end;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+}
+
+.menu-navigasi * {
+    opacity: 1;
+}
+
+.link-navigasi {
+    margin: 0;
+    display: flex;
+    list-style: none;
+    padding: 0;
+    justify-content: flex-end;
+    margin-right: 10%; 
+    /* Setting margin */
+}
+
+.link-navigasi li {
+    margin-right: 10px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.link-navigasi li a {
+    padding: 20px;
+    color: white;
+    text-decoration: none;
+    display: inline-block;;
+}
+
+.link-navigasi li a:hover {
+    background-color: #3A6D8C;
+    color: #EAD8B1;
+    border: none;
+}
+/* On Progress */
+/* Setting .galery biar bisa ketarik ke tengah */
+.galery {
+    width: 60px;
+    height: 60px;
+    justify-content: flex-end;
+    margin-left: 0%;
 }
