--- a/index.css
+++ b/index.css
@@ -56,7 +56,7 @@ html {
     margin: 0;
     background-color: rgba(0, 0, 0, 0.5);;
     padding: 0;
-    justify-content: flex-end;
+    justify-content: space-between;
     position: fixed;
     top: 0;
     left: 0;
@@ -100,6 +100,5 @@ html {
 .galery {
     width: 60px;
     height: 60px;
-    justify-content: flex-end;
-    margin-left: 0%;
+    margin-left: 10%;
 }
