--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ html {
 
 .container {
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -62,6 +62,7 @@ html {
     left: 0;
     right: 0;
     width: 100%;
+    z-index: 1000;
 }
 
 .menu-navigasi * {
@@ -74,7 +75,7 @@ html {
     list-style: none;
     padding: 0;
     justify-content: flex-end;
-    margin-right: 10%; 
+    margin-right: 5%; 
     /* Setting margin */
 }
 
@@ -95,10 +96,46 @@ html {
     color: #EAD8B1;
     border: none;
 }
-/* On Progress */
-/* Setting .galery biar bisa ketarik ke tengah */
+
 .galery {
     width: 60px;
     height: 60px;
-    margin-left: 10%;
+    margin-left: 5%;
 }
+
+.about-me {
+    color: #EAD8B1;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 40%;
+    font-size: 20px;
+    position: relative;
+}
+
+.about-me p {
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.about-me .visi-misi {
+    text-align: right;
+
+}
+
+.about-me .v-m {
+    font-style: italic;
+    text-align: right;
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.about-me .bahasa-pemrograman {
+    text-align: center;
+}
+
+.video-code {
+    position: relative;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+}
+
